--- a/src/components/Calendar/index.css
+++ b/src/components/Calendar/index.css
@@ -7,7 +7,23 @@
   --sx-rounding-small: var(--radius);
   --sx-rounding-extra-small: var(--radius);
   /* 100vh - xy padding above card - xy padding below card - header - page title */
-  --sx-calendar-calculated-height: calc(100vh - 48px - 32px - 40.8px - 78px);
+  --sx-calendar-calculated-height: calc(100vh - 48px - 32px - 40.8px - 80px);
+  /* 100vh - xy padding above card - xy padding below card - header - page title */
+  --sx-calendar-calculated-height-sm: calc(100vh - 48px - 32px - 40.8px - 122px);
+}
+
+.sx__calendar-wrapper {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-shadow);
+  border-radius: var(--radius);
+  height: var(--sx-calendar-calculated-height);
+}
+
+@media (max-width: 640px) {
+  .sx__calendar-wrapper {
+    height: var(--sx-calendar-calculated-height-sm);
+  }
 }
 
 .sx__event:hover {
@@ -18,13 +34,6 @@
   margin: 1px;
 }
 
-.sx__calendar-wrapper {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-shadow);
-  border-radius: var(--radius);
-  height: var(--sx-calendar-calculated-height);
-}
 
 .sx__time-grid-event {
   border-radius: 4px;
@@ -44,8 +53,24 @@
 
 .sx__week-grid__date {
   gap: 0;
+  padding-top: 0;
+  height: fit-content;
+}
+
+.sx__week-grid__date-number {
+  height: 1em;
+  width: 1em;
+}
+
+.sx__week-grid__date--is-today .sx__week-grid__date-number {
+  background-color: transparent;
+  color: var(--color-accent);
 }
 
 .sx__current-time-indicator {
   background-color: var(--sx-color-primary);
+}
+
+.sx__calendar-header {
+  padding: 12px;
 }
